# shortcutd

./: Cargo.toml  README.md  flake.nix  nixos-nl.icewind.shortcutd.conf  nl.icewind.shortcutd.conf  shortcutd.service
.github/workflows/: ci.yml
client/: Cargo.toml
client/examples/: client.rs  simple.rs
client/src/: dbus.rs  lib.rs
examples/: client.rs
server/: Cargo.toml
server/src/: server.rs
src/: lib.rs  main.rs  server.rs
src/keyboard/: keycodes.rs  mod.rs
