[package]
name = "shortcutd"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[lib]
name = "shortcutd"
path = "src/lib.rs"

[[bin]]
name = "shortcutd"
path = "src/server.rs"

[dependencies]
evdev = "0.10.1"
main_error = "0.1.0"
num_enum = "0.4.3"
dbus = "0.8.2"
parse-display = "0.1.1"
glob = "0.3.0"

[dev-dependencies]
test-case = "1.0.0"