[package]
name = "shortcutd"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[lib]
name = "shortcutd"
path = "src/lib.rs"

[dependencies]
dbus = { version = "0.8.4" }
evdev-shortcut = { version = "0.1.1", default_features = false }

[dev-dependencies]
test-case = "3.1.0"