[package]
name = "shortcutd-server"
version = "0.1.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"

[[bin]]
name = "shortcutd"
path = "src/server.rs"

[dependencies]
main_error = "0.1.0"
glob = "0.3.0"
evdev-shortcut = "0.1.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.28"
zbus = { version = "3.13.1", features = ["tokio"], default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
test-case = "3.1.0"